web-infras/parser/tests/fixtures/esprima/es2017/async/functions/invalid-async-function-declaration-duplicate-params/output.txt
[SyntaxError]: duplicate params (1,26)
1|async function *f(x = 1, x) {}
 |                        ^
